--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,13 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Contact La Panthere site professionel web design">
+	<meta name="robots" content="follow, index">
+    <meta name="description" content="Contact La Panthere site professionel webdesign">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
@@ -122,7 +123,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br><br>
+					<a href="mailto:contact@agencelapanthere.com">contact@agencelapanthere.com</a><br><a target="blank" href="https://www.google.fr/maps/place/2+Pl.+Sathonay,+69001+Lyon/@45.7695241,4.8279733,17z/data=!3m1!4b1!4m5!3m4!1s0x47f4eb020f3664e9:0x13e3d71752922c1f!8m2!3d45.7695241!4d4.8301673">2 place Sathonay 69001 Lyon</a><br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
