--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="L'agence Web La Panthere specialisé dans web design vous aides a devenir plus attractif et plus visible sur internet">
+	<meta name="robots" content="follow, index">
+    <meta name="description" content="Agence Webdesign La Panthere basée a Lyon specialisée dans le webdesign vous aides à devenir plus attractif et plus visible sur internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
@@ -23,7 +24,7 @@
 	<meta property="og:url" content="https://baracoudea.github.io/LaPanthereNew/" />
 	<meta property="og:image" content="img/agence-la-panthere.svg" />
 
-    <title>Agence Web Design - La Panthère</title>
+    <title>Agence Webdesign - La Panthère</title>
 
     
 <!-- Analytics -->
@@ -61,7 +62,7 @@
 			<div class="col-sm-12">
 				<img src="img/logo.png" class="center-block image-resize-mode" alt="Agence La Panthère, agence web paris, création logo paris" />
 				<h1 class="text-center hero-bloc-text tc-white ">
-					Agence La Panthère
+					Agence Webdesign La Panthère
 				</h1>
 				<div class="text-center">
 					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -209,7 +210,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					<a href="mailto:contact@agencelapanthere.com">contact@agencelapanthere.com</a><br><a href="https://www.google.fr/maps/place/2+Pl.+Sathonay,+69001+Lyon/@45.7695241,4.8279733,17z/data=!3m1!4b1!4m5!3m4!1s0x47f4eb020f3664e9:0x13e3d71752922c1f!8m2!3d45.7695241!4d4.8301673">2 place Sathonay 69001 Lyon</a><br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+					<a href="mailto:contact@agencelapanthere.com">contact@agencelapanthere.com</a><br><a targer="blank" href="https://www.google.fr/maps/place/2+Pl.+Sathonay,+69001+Lyon/@45.7695241,4.8279733,17z/data=!3m1!4b1!4m5!3m4!1s0x47f4eb020f3664e9:0x13e3d71752922c1f!8m2!3d45.7695241!4d4.8301673">2 place Sathonay 69001 Lyon</a><br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
