/img changement OGIMAGE

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<meta property="og:title" content="La Panthère - Accueil" />
 	<meta property="og:type" content="Agence Web Design" />
 	<meta property="og:url" content="https://baracoudea.github.io/LaPanthereNew/" />
-	<meta property="og:image" content="img/agence-la-panthere.svg" />
+	<meta property="og:image" content="/img/agence-la-panthere.svg" />
 
     <title>Agence Webdesign - La Panthère</title>
 
