--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,15 @@
 
     
 <!-- Analytics -->
- 
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MQVR7TFE02"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MQVR7TFE02');
+</script>
 <!-- Analytics END -->
     
 </head>
