--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 	<meta name="robots" content="follow, index">
-    <meta name="description" content="Contact La Panthere site professionel webdesign">
+    <meta name="description" content="Entreprise webdesign Lyon La Panthère contact">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -22,7 +22,7 @@
 	<meta property="og:title" content="La Panthère - Contact" />
 	<meta property="og:type" content="Agence Web Design" />
 	<meta property="og:url" content="https://baracoudea.github.io/LaPanthereNew/" />
-	<meta property="og:image" content="img/agence-la-panthere.svg" />
+	<meta property="og:image" content="/img/agence-la-panthere.svg" />
 
     <title>Contact - La Panthère</title>
 
