--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 	<meta name="robots" content="follow, index">
-    <meta name="description" content="Agence Webdesign La Panthere basée a Lyon specialisée dans le webdesign vous aides à devenir plus attractif et plus visible sur internet">
+    <meta name="description" content="Entreprise Webdesign Lyon La Panthère specialisée dans le webdesign vous aides à devenir plus attractif et plus visible sur internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -24,7 +24,7 @@
 	<meta property="og:url" content="https://baracoudea.github.io/LaPanthereNew/" />
 	<meta property="og:image" content="/img/agence-la-panthere.svg" />
 
-    <title>Agence Webdesign - La Panthère</title>
+    <title>Entreprise webdesign Lyon - La Panthère</title>
 
     
 <!-- Analytics -->
@@ -68,7 +68,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.avif" class="center-block image-resize-mode" alt="Agence La Panthère, agence web paris, création logo paris" />
+				<img src="img/logo.avif" class="center-block image-resize-mode" alt="Entreprise webdesign Lyon , logo , La Panthère" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					Agence Webdesign La Panthère
 				</h1>
@@ -86,7 +86,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2>L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibiles sur internet.</h2>
+				<h2>L'Entreprise La Panthère est une entreprise de webdesign basée a Lyon qui aide les entreprises à devenir attractives et visibiles sur internet.</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
