changement h1 agence par entreprise

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<script src="./js/gmaps.js" async></script>
 
 	<meta property="og:title" content="La Panthère - Accueil" />
-	<meta property="og:type" content="Agence Web Design" />
+	<meta property="og:type" content="Entreprise webdesign Lyon - La Panthère" />
 	<meta property="og:url" content="https://baracoudea.github.io/LaPanthereNew/" />
 	<meta property="og:image" content="/img/agence-la-panthere.svg" />
 
@@ -70,7 +70,7 @@
 			<div class="col-sm-12">
 				<img src="img/logo.avif" class="center-block image-resize-mode" alt="Entreprise webdesign Lyon , logo , La Panthère" />
 				<h1 class="text-center hero-bloc-text tc-white ">
-					Agence Webdesign La Panthère
+					Entreprise Webdesign Lyon - La Panthère
 				</h1>
 				<div class="text-center">
 					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
